--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
                 const { error, isLoaded, players } = this.state;
                 if (error) {
                     return <div>Error: {error.message}</div>;
+                } else if (!isLoaded) {
+                    return <div>Loading...</div>;
                 } else {
                     return (
                         <ul>
                             {console.log(players)}
                             {players.map(player => (
                                 <li key={player.name}>
-                                    <a href="http://localhost:3000/api/players/" onClick={(e) => this.handleClick(e)}>{player.name} {player.active}</a>
+                                    <a href={"http://localhost:3000/api/players/" + player.id} onClick={(e) => this.handleClick(e)}>{player.name} {player.active}</a>
                                 </li>
                             ))}
                         </ul>
