--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                             {players.map(player => (
                                 <li key={player.name}>
                                     <a href={"http://localhost:3000/api/players/" + player.id} onClick={(e) => this.handleClick(e)}>{player.name} {player.active}</a>
+                                    <div>
+                                        Player {player.name}'s activity status is: {player.active.toString()}
+                                    </div>
                                 </li>
                             ))}
                         </ul>
